# MadGraph5-simulation-configs

./: .gitignore  .pre-commit-config.yaml  README.md  acknowledgements.md  check_event_counts.py  generate_config.py  pyproject.toml  requirements.txt  run_docker.sh
bluewaters/: README.md  aprun_drell-yan.sh  aprun_shifter.sh  aprun_shifter_interactive.sh  clean_logs.sh  combine_momemta.sh  combine_preprocessing.sh  drell-yan_delphes.pbs  drell-yan_madgraph5.pbs  move_logs.sh  pbs_drell-yan.pbs  pbs_drell-yan_delphes.sh  pbs_drell-yan_madgraph5.pbs  pbs_drell-yan_madgraph5.sh  preprocessing.pbs  run_delphes.sh  run_madgraph5.sh  run_momemta.sh  run_preprocessing.sh
bluewaters/drell-yan/: combine_momemta.pbs  delphes.pbs  madgraph5.pbs  momemta.pbs  preprocessing.pbs
bluewaters/drell-yan_ll/: combine_momemta.pbs  combine_preprocessing.pbs  delphes.pbs  madgraph5.pbs  momemta.pbs  preprocessing.pbs
configs/drell-yan/: drell-yan.mg5
configs/json/: drell-yan.json  drell-yan_ll.json  drell-yan_llbb.json
configs/madgraph5/: drell-yan.mg5  drell-yan_ll.mg5
configs/momemta/: drell-yan.mg5  drell-yan_ll.mg5  drell-yan_llbb.mg5
configs/ttbar/: ttbar-fully-leptonic.mg5
debug-example/: CMakeLists.txt  drell-yan_example.cxx  drell-yan_example.lua  run_momemta.sh  run_momemta_drell-yan.sh
dgx/: README.md  delphes_generate.sh  madgraph_generate.sh  preprocessing_generate.sh  run_clean.sh  run_delphes.sh  run_madgraph.sh  run_momemta.sh  run_preprocessing.sh
dgx/drell-yan_ll/: delphes.sh  madgraph.sh  momemta.sh  preprocessing.sh
drell_yan_momemta_example/: CMakeLists.txt
drell_yan_momemta_example/momemta/: CMakeLists.txt
examples/: README.md  plot_mass_spectrum.py  plot_mass_spectrum_ROOT.py  run_drell-yan.sh  run_example.sh  run_momemta.sh  run_test.sh  run_ttbar.sh
momemta/drell-yan/: drell-yan_example.cxx  drell-yan_example.lua  run_momemta.sh
momemta/drell-yan_ll/: drell-yan_example.cxx  run_momemta.sh
momemta/llbb/: CMakeLists.txt  drell-yan.lua  final_state_llbb.cxx  run_momemta.sh  topology_llbb.cxx
preprocessing/: README.md  run_preprocessing.sh
preprocessing/scripts/: HistCollections.py  SimpleAna.py
preprocessing/src/: HistCollections.py  SimpleAna.py
